# azure-ml-finetuning-eval-skills

./: .env.sample  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
e2e_test_w_skill/: README.md  evaluate_customer_support_model.py  generate_customer_support_data.py  run_e2e_workflow.py  submit_customer_support_training.py  submit_finetune_job.py
e2e_test_w_skill/environment/: conda.yml
e2e_test_w_skill/src/: train_sft.py
e2e_test_wo_skill/: evaluate_customer_support_model.py  finetune_customer_support_model.py  generate_customer_support_data.py
sample/environment/: conda.yml
sample/src/: train_rl.py
skills/azure-ml-dataset-creator/: SKILL.md
skills/azure-ml-dataset-creator/examples/: generate_adversarial.py  generate_conversation.py  generate_jailbreak_attacks.py  generate_qa_from_text.py  generate_with_custom_prompty.py  utils.py
skills/azure-ml-dataset-creator/examples/custom_simulator_prompty/: query_generator.prompty  user_override.prompty
skills/azure-ml-llm-trainer/: SKILL.md
skills/azure-ml-llm-trainer/examples/: submit_dpo_job.py  submit_rl_job.py  submit_sft_job.py
skills/azure-ml-llm-trainer/examples/src/: train_dpo.py  train_sft.py
skills/azure-ml-model-evaluation/: SKILL.md
skills/azure-ml-model-evaluation/examples/: cloud_evaluation.py  local_evaluation.py  utils.py
